se termino de hacer el sitio responsive

--- a/section/web.html
+++ b/section/web.html
@@ -54,10 +54,10 @@
             <h1 class="hero__web--titulo">Diseño Web</h1>
         </div>
     </article>
-    <section>
+    <section class="trabajos_web"
         <div>
             <h2>Páginas y redes</h2>
-            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div id="carouselExampleCaptions" class="carousel slide mx-auto" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -66,24 +66,12 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                     <img src="../img/web sumicons.jpg" class="d-block w-100" alt="vista previa de como se veria la web de la empresa">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Sumicons</h5>
-                        <p>suministros y construccion</p>
-                    </div>
                 </div>
                 <div class="carousel-item">
                     <img src="../img/web-interwarp.jpg" class="d-block w-100" alt="vista previa de como se veria la web de la empresa">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>InterWarp</h5>
-                        <p>servicios de telecomunicaciones</p>
-                    </div>
                 </div>
                 <div class="carousel-item">
                     <img src="../img/web-planner.jpg" class="d-block w-100" alt="vista previa de como se veria la web de la empresa">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Planner Point</h5>
-                        <p>invitaciones digitales</p>
-                    </div>
                 </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -97,28 +85,28 @@
             </div>
         </div>
     </section>
-    <section>
-        <article>
+    <section class="web__video mx-auto">
+        <article class="mx-auto">
             <h2>Páginas modernas y responsive</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio.</p>
-            <div class="video__container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/dyKDFkCLcDs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="video__container mx-auto">
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dyKDFkCLcDs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </article>
     </section>
-    <section>
+    <section class="ilustraciones__empresas">
         <h3>Ellos me eligieron</h3>
-        <div class="web__logo--container">
-            <div class="web__logo">
+        <div class="web__logo--container mx-auto row">
+            <div class="web__logo col-6 col-md-3">
                 <img src="../img/grafico-global.jpg" alt="global consultora">
             </div>
-            <div class="web__logo">
+            <div class="web__logo col-6 col-md-3">
                 <img src="../img/grafico-interwarp.jpg" alt="interwarp telecomunicaciones">
             </div>
-            <div class="web__logo">
+            <div class="web__logo col-6 col-md-3">
                 <img src="../img/grafico-ofertone.jpg" alt="ofertones e-shop">
             </div>
-            <div class="web__logo">
+            <div class="web__logo col-6 col-md-3">
                 <img src="../img/grafico-optima.jpg" alt="optima 3d arquitectura">
             </div>
         </div>
