--- a/section/grafico.html
+++ b/section/grafico.html
@@ -57,7 +57,7 @@
     <section class="trabajos_grafico">
         <div>
             <h2>Trabajos de Diseño Gráfico</h2>
-            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div id="carouselExampleCaptions" class="carousel slide mx-auto" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -90,7 +90,7 @@
             <h2>Gráfico para tu empresa</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio.</p>
             <div class="video__container mx-auto">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/tHGx6TJEPZs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/tHGx6TJEPZs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </article>
     </section>
