se cambiaron lorems por info final

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <img src="./img/mi-historia.webp" alt="fotografía de la diseñadora">
         </div> 
         <h1>¡Hola!<br>Soy Cherry</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima recusandae ut dolores molestias accusantium fugiat vel alias blanditiis beatae et. Facere tenetur, minima veniam ducimus hic consectetur dolores magnam in?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima recusandae ut dolores molestias accusantium fugiat vel alias blanditiis beatae et. </p>
+        <p>Soy una diseñadora apasionada del arte, que busca día a día ser una mejor versión de la artista que hay dentro mío. Te invito a conocer un poco más de mí y mis trabajos con la esperanza de que algún día trabajemos juntos. </p>
         <div class="boton-conoceme">
             <a href="./section/historia.html" class="boton">MÁS SOBRE MI</a>
         </div>
@@ -82,7 +82,7 @@
                     <img src="./img/ilustraciones.png" alt="icono con acceso a la   seccion ilustraciones">
                 </div>
                 <h3>Ilustraciones</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam odit sequi aut quod blanditiis, ipsa repudiandae maiores minima deserunt minus exercitationem molestiae atque dolor explicabo possimus ducimus harum rem laudantium.</p>
+                <p>En mis trabajos de ilustración busco darle vida a tus proyectos de forma divertida, con personajes únicos para tu marca, tu indumentaria o tu videojuego, pensando y planeando cada una de ellas en base a lo que las mismas deben comunicar.</p>
                 <div class="trabajos__boton-container">
                     <a href="./section/ilustraciones.html" class="boton">VER MÁS</a>
                 </div>
@@ -92,7 +92,7 @@
                     <img src="./img/grafica.png" alt="icono con acceso a la seccion de diseño Gráfico">
                 </div>
                 <h3>Diseño Gráfico</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam odit sequi aut quod blanditiis, ipsa repudiandae maiores minima deserunt minus exercitationem molestiae atque dolor explicabo possimus ducimus harum rem laudantium.</p>
+                <p>Para mis trabajos de diseño me centro principalmente en la identidad de la marca, buscando la mejor manera de representarlos de manera gráfica y sean fáciles de reconocer por los usuarios.</p>
                 <div class="trabajos__boton-container">
                     <a href="./section/grafico.html" class="boton">VER MÁS</a>
                 </div>
@@ -102,7 +102,7 @@
                     <img src="./img/web.png" alt="icono con acceso a la seccion de diseño web">
                 </div>
                 <h3>Diseño Web</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam odit sequi aut quod blanditiis, ipsa repudiandae maiores minima deserunt minus exercitationem molestiae atque dolor explicabo possimus ducimus harum rem laudantium.</p>
+                <p>En cuanto a mis proyectos web es de suma importancia la funcionalidad y estética, para que estos puedan comunicar de manera ágil los servicios de mis clientes, así como también transmitir sus valores e ideales.</p>
                 <div class="trabajos__boton-container">
                     <a href="./section/web.html" class="boton">VER MÁS</a>
                 </div>
