--- a/section/grafico.html
+++ b/section/grafico.html
@@ -88,7 +88,7 @@
     <section class="grafico__video mx-auto">
         <article class="mx-auto">
             <h2>Gráfico para tu empresa</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio.</p>
+            <p>Todo lo que necesitas para destacar </p>
             <div class="video__container mx-auto">
                 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/tHGx6TJEPZs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
