--- a/section/historia.html
+++ b/section/historia.html
@@ -62,7 +62,7 @@
         <div class="sobreMi__img mx-auto">
             <img src="../img/dibujo-historia.png" alt="fotografía de la diseñadora">
         </div>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit repudiandae soluta, aliquid enim cupiditate molestiae consequatur. Rerum, commodi a alias quos est doloribus numquam minus voluptatem, blanditiis labore veritatis optio!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit repudiandae soluta, aliquid enim cupiditate molestiae consequatur. Rerum, commodi a alias quos est doloribus numquam minus voluptatem, blanditiis labore veritatis optio!</p>
+        <p>Mi nombre es Carolina Oviedo, soy una diseñadora gráfica de 31 años y vivo en Villa Carlos paz, Cordoba.  Mí apodo "Cherry" viene del color de mí pelo, que por mis años de universidad era de un rojo vibrante, el cual adoptaron con cariño mis seres queridos y del que hoy he decidido hacer mí marca personal. Amo el arte como forma de expresión, la música como inspiración y la comunicación, que es abstracta y representa un desafío cotidiano, que permite conocer a otros y la magia de poder hacer tangible la pasión que pone cada uno en lo que ama, para que los demás puedan sentirlo y contagiarlo</p>
     </section>
 <!--Seccion de trayectoria-->
     <section class="trayectoria mx-auto">
@@ -71,7 +71,7 @@
             <div class="trayectoria__img mx-auto">
                 <img src="../img/dibujo-trayectoria.png" alt="fotografía de la diseñadora">
             </div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit repudiandae soluta, aliquid enim cupiditate molestiae consequatur. Rerum, commodi a alias quos est doloribus numquam minus voluptatem, blanditiis labore veritatis optio!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit repudiandae soluta, aliquid enim cupiditate molestiae consequatur. Rerum, commodi a alias quos est doloribus numquam minus voluptatem, blanditiis labore veritatis optio!</p>
+            <p>Una vez terminada la secundaria y decidida que quería trabajar del arte, encontré en el diseño gráfico la posibilidad de convertir en realidad las ideas de los demás. En el año 2010 me inscribí en la Escuela Superior de Artes Aplicadas “Lino Enea Spilimbergo”, recibiéndome en 4 años. Desde entonces he trabajado para agencias de diseño gráfico y de diseño web asi como también de manera autónoma con empresas de diferentes calibres, desde emprendedores locales como empresas en el exterior.</p>
         </div>
     </section>
 <!--Seccion de conocimientos-->
@@ -81,19 +81,19 @@
             <div class="conocimientos__foto">
                 <img src="../img/dibujo-conocimiento.png" alt="fotografía de la diseñadora">
             </div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit repudiandae soluta, aliquid enim cupiditate molestiae consequatur.</p>
+            <p>Dentro de mis conocimientos y habilidades puedo destacar:</p>
             <div class="conocimientos__logo--container row">
                 <div class="conocimientos__logo col-6">
                     <div class="conocimientos__img">
                         <img src="../img/ilustraciones.png" alt="icono de referencia a conocimientos que tiene la diseñadora">
                     </div>
-                    <h3>Redes Sociales</h3>
+                    <h3>Identidad Visual</h3>
                 </div>        
                 <div class="conocimientos__logo col-6">
                     <div class="conocimientos__img">
                         <img src="../img/ilustraciones.png" alt="icono de referencia a conocimientos que tiene la diseñadora">
                     </div>
-                    <h3>Redes Sociales</h3>
+                    <h3>Diseño de personajes</h3>
                 </div>
                 <div class="conocimientos__logo col-6">
                     <div class="conocimientos__img">
@@ -105,19 +105,19 @@
                     <div class="conocimientos__img">
                         <img src="../img/ilustraciones.png" alt="icono de referencia a conocimientos que tiene la diseñadora">
                     </div>
-                    <h3>Redes Sociales</h3>
+                    <h3>Vectorizacion</h3>
                 </div>
                 <div class="conocimientos__logo col-6">
                     <div class="conocimientos__img">
                         <img src="../img/ilustraciones.png" alt="icono de referencia a conocimientos que tiene la diseñadora">
                     </div>
-                    <h3>Redes Sociales</h3>
+                    <h3>Diseño de logotipos</h3>
                 </div>
                 <div class="conocimientos__logo col-6">
                     <div class="conocimientos__img">
                         <img src="../img/ilustraciones.png" alt="icono de referencia a conocimientos que tiene la diseñadora">
                     </div>
-                    <h3>Redes Sociales</h3>
+                    <h3>Banners publicitarios</h3>
                 </div>
             </div>
         </div>    
