--- a/section/ilustraciones.html
+++ b/section/ilustraciones.html
@@ -88,7 +88,7 @@
     <section class="ilustraciones__video mx-auto">
         <article class="mx-auto">
             <h2>Tu Proyecto animado</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio.</p>
+            <p>Démosle vida a tus personajes</p>
             <div class="video__container mx-auto">
                 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Iu4PiZbq9GI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
