--- a/section/web.html
+++ b/section/web.html
@@ -88,7 +88,7 @@
     <section class="web__video mx-auto">
         <article class="mx-auto">
             <h2>Páginas modernas y responsive</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio.</p>
+            <p>Que tu sitio sea el mejor</p>
             <div class="video__container mx-auto">
                 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dyKDFkCLcDs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
