se agregaron meta keywords y meta descripcion, se completaron detalles de responsive

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Diseñadora grafica de Cordoba, creativa y atenta al detalle. Diseño grafico, ilustraciones y diseño web. Contactame">
+    <meta name="keywords" content="Diseñador, diseñadora, grafico, ilustraciones, web">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="icon" href="./img/OhCherry-Fabicon.ico">
@@ -70,7 +72,7 @@
         <h1>¡Hola!<br>Soy Cherry</h1>
         <p>Soy una diseñadora apasionada del arte, que busca día a día ser una mejor versión de la artista que hay dentro mío. Te invito a conocer un poco más de mí y mis trabajos con la esperanza de que algún día trabajemos juntos. </p>
         <div class="boton-conoceme">
-            <a href="./section/historia.html" class="boton">MÁS SOBRE MI</a>
+            <a href="./section/historia.html" class="boton">MÁS SOBRE MÍ</a>
         </div>
     </article>
 <!-- Seccion cartas de trabajos con acceso a las páginas de los diferentes trabajos-->
