se empezo a cambiar tamaños de fuentes para que sean responsive sin la necesidad de medias querys

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="icon" href="./img/OhCherry-Fabicon.ico">
-    <title>Inicio</title>
+    <title>OhCherry Inicio</title>
 </head>
 <body>
 <!--Header y navbar-->
@@ -69,8 +69,8 @@
         <div class="conoceme__foto-container">
             <img src="./img/mi-historia.webp" alt="fotografía de la diseñadora">
         </div> 
-        <h1>¡Hola!<br>Soy Cherry</h1>
-        <p>Soy una diseñadora apasionada del arte, que busca día a día ser una mejor versión de la artista que hay dentro mío. Te invito a conocer un poco más de mí y mis trabajos con la esperanza de que algún día trabajemos juntos. </p>
+        <h1>¡Hola! Soy Cherry</h1>
+        <p>Soy una diseñadora apasionada del arte, que busca día a día ser una mejor versión de la artista que hay dentro mío. Te invito a conocer un poco más de mí y mis trabajos con la esperanza de que algún día trabajemos juntos.</p>
         <div class="boton-conoceme">
             <a href="./section/historia.html" class="boton">MÁS SOBRE MÍ</a>
         </div>
