--- a/section/web.html
+++ b/section/web.html
@@ -56,7 +56,7 @@
             <h1 class="hero__web--titulo">Diseño Web</h1>
         </div>
     </article>
-    <section class="trabajos_web"
+    <section class="trabajos_web">
         <div>
             <h2>Páginas y redes</h2>
             <div id="carouselExampleCaptions" class="carousel slide mx-auto" data-bs-ride="carousel">
