--- a/section/historia.html
+++ b/section/historia.html
@@ -64,7 +64,8 @@
         <div class="sobreMi__img mx-auto">
             <img src="../img/dibujo-historia.webp" alt="fotografía de la diseñadora">
         </div>
-        <p>Mi nombre es Carolina Oviedo, soy una diseñadora gráfica de 31 años y vivo en Villa Carlos paz, Cordoba.  Mí apodo "Cherry" viene del color de mí pelo, que por mis años de universidad era de un rojo vibrante, el cual adoptaron con cariño mis seres queridos y del que hoy he decidido hacer mí marca personal. Amo el arte como forma de expresión, la música como inspiración y la comunicación, que es abstracta y representa un desafío cotidiano, que permite conocer a otros y la magia de poder hacer tangible la pasión que pone cada uno en lo que ama, para que los demás puedan sentirlo y contagiarlo</p>
+        <p class="sobreMi--primerParrafo">Mi nombre es Carolina Oviedo, soy una diseñadora gráfica de 31 años y vivo en Villa Carlos paz, Cordoba.  Mí apodo "Cherry" viene del color de mí pelo, que por mis años de universidad era de un rojo vibrante, el cual adoptaron con cariño mis seres queridos y del que hoy he decidido hacer mí marca personal.</p>
+        <p class="sobreMi--segundoParrafo">Amo el arte como forma de expresión, la música como inspiración y la comunicación, que es abstracta y representa un desafío cotidiano, que permite conocer a otros y la magia de poder hacer tangible la pasión que pone cada uno en lo que ama, para que los demás puedan sentirlo y contagiarlo</p>
     </section>
 <!--Seccion de trayectoria-->
     <section class="trayectoria mx-auto">
@@ -73,7 +74,8 @@
             <div class="trayectoria__img mx-auto">
                 <img src="../img/dibujo-trayectoria.webp" alt="fotografía de la diseñadora">
             </div>
-            <p>Una vez terminada la secundaria y decidida que quería trabajar del arte, encontré en el diseño gráfico la posibilidad de convertir en realidad las ideas de los demás. En el año 2010 me inscribí en la Escuela Superior de Artes Aplicadas “Lino Enea Spilimbergo”, recibiéndome en 4 años. Desde entonces he trabajado para agencias de diseño gráfico y de diseño web asi como también de manera autónoma con empresas de diferentes calibres, desde emprendedores locales como empresas en el exterior.</p>
+            <p class="trayectoria--primerParrafo">Una vez terminada la secundaria y decidida que quería trabajar del arte, encontré en el diseño gráfico la posibilidad de convertir en realidad las ideas de los demás. En el año 2010 me inscribí en la Escuela Superior de Artes Aplicadas “Lino Enea Spilimbergo”, recibiéndome en 4 años.</p>
+            <p class="trayectoria--segundoParrafo"> Desde entonces he trabajado para agencias de diseño gráfico y de diseño web asi como también de manera autónoma con empresas de diferentes calibres, desde emprendedores locales como empresas en el exterior.</p>
         </div>
     </section>
 <!--Seccion de conocimientos-->
