se ajustaron tamaños de txtos e imagenes

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     </section>
 <!-- Seccion habilidades con animaciones-->
     <section class="habilidades">
-        <h2 class="habilidades__titulo">Habilidades</h2>
+        <h2 class="habilidades__titulo">Mis Habilidades</h2>
         <div class="habilidades__logos">
             <div class="illustrator">
                 <img src="./img/logo illustrator.webp" alt="logo adobe illustrator">
