se terminaron de hacer responsive textos e imagenes

--- a/section/contacto.html
+++ b/section/contacto.html
@@ -88,25 +88,25 @@
                 <div class="contacto__logo">
                     <img src="../img/Correo blanco.webp" alt="logo de correo electronico">
                 </div>
-                <h3>ohcherry91@gmail.com</h3>
+                <a href="mailto:ohcherry91@gmail.com">ohcherry91@gmail.com</a>
             </div>
             <div class="contacto__logos--container col-6 col-sm-3">
                 <div class="contacto__logo">
                     <img src="../img/what-blanco.webp" alt="logo de whatsapp">
                 </div>
-                <h3>3541-335996</h3>
+                <a href="https://wa.me/5493541335996" target="_blank">3541-335996</a>
             </div>
             <div class="contacto__logos--container col-6 col-sm-3">
                 <div class="contacto__logo">
                     <img src="../img/insta blanco.webp" alt="logo de instagram">
                 </div>
-                <h3>@ohcherry</h3>
+                <a href="https://www.instagram.com/ohcherry91/" target="_blank">@ohcherry91</a>
             </div>
             <div class="contacto__logos--container col-6 col-sm-3">
                 <div class="contacto__logo">
                     <img src="../img/Face blanco.webp" alt="logo de facebook">
                 </div>
-                <h3>@ohcherry</h3>
+                <a href="https://www.facebook.com/cherry.oh.39" target="_blank">Cherry Oh</a>
             </div>
         </div>
     </section>
@@ -141,17 +141,29 @@
             <div class="footer__contacto">
                 <h4>Contacto</h4>
                 <ul>
-                    <li class="correo">  
-                        <p>ohcherry91@gmail.com</p>
+                    <li class="correo">
+                        <div class="footer__logo">
+                            <img src="../img/Correo.svg" alt="logo de sobre color rosa">
+                        </div>
+                        <a href="mailto:ohcherry91@gmail.com">ohcherry91@gmail.com</a>
                     </li>
                     <li class="celu">
-                        <p>3541-335996</p>
-                    </li>
-                    <li class="face">
-                        <p>@ohcherry</p>
+                        <div class="footer__logo">
+                            <img src="../img/Whatsapp.svg" alt="logo de whatsapp color rosa">
+                        </div>
+                        <a href="https://wa.me/5493541335996" target="_blank">3541-335996</a>
                     </li>
                     <li class="insta">
-                        <p>@ohcherry</p>
+                        <div class="footer__logo">
+                            <img src="../img/Instagram.svg" alt="logo de instagram color rosa">
+                        </div>
+                        <a href="https://www.instagram.com/ohcherry91/" target="_blank">@ohcherry91</a>
+                    </li>
+                    <li class="face">
+                        <div class="footer__logo">
+                            <img src="../img/Facebook.svg" alt="logo de facebook color rosa">
+                        </div>
+                        <a href="https://www.facebook.com/cherry.oh.39" target="_blank">Cherry Oh</a>
                     </li>
                 </ul>
             </div>
