se solucionaron problemas de accesibilidad

--- a/section/contacto.html
+++ b/section/contacto.html
@@ -64,15 +64,15 @@
         <div class="contact-form">
             <h2>Enviame tu consulta</h2>
             <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="floatingInput" placeholder="nombre">
+                <input type="text" class="form-control" id="floatingInputname" placeholder="nombre">
                 <label for="floatingInput">*Nombre</label>
             </div>
             <div class="form-floating mb-3">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                <input type="email" class="form-control" id="floatingInputmail" placeholder="name@example.com">
                 <label for="floatingInput">*Email</label>
             </div>
             <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="floatingInput" placeholder="numero de telefono">
+                <input type="text" class="form-control" id="floatingInputphone" placeholder="numero de telefono">
                 <label for="floatingInput">*Telefono</label>
             </div>
             <div class="form-floating">
@@ -116,7 +116,7 @@
                 <img src="../img/logo-footer.webp" alt="logotipo de la empresa">
             </div>
             <div class="footer__paginas">
-                <h4>Páginas</h4>
+                <h3>Páginas</h3>
                 <ul>
                     <li>
                         <a href="../index.html">INICIO</a>
@@ -139,7 +139,7 @@
                 </ul>
             </div>            
             <div class="footer__contacto">
-                <h4>Contacto</h4>
+                <h3>Contacto</h3>
                 <ul>
                     <li class="correo">
                         <div class="footer__logo">
