--- a/section/historia.html
+++ b/section/historia.html
@@ -64,8 +64,8 @@
         <div class="sobreMi__img mx-auto">
             <img src="../img/dibujo-historia.webp" alt="fotografía de la diseñadora">
         </div>
-        <p class="sobreMi--primerParrafo">Mi nombre es Carolina Oviedo, soy una diseñadora gráfica de 31 años y vivo en Villa Carlos paz, Cordoba.  Mí apodo "Cherry" viene del color de mí pelo, que por mis años de universidad era de un rojo vibrante, el cual adoptaron con cariño mis seres queridos y del que hoy he decidido hacer mí marca personal.</p>
-        <p class="sobreMi--segundoParrafo">Amo el arte como forma de expresión, la música como inspiración y la comunicación, que es abstracta y representa un desafío cotidiano, que permite conocer a otros y la magia de poder hacer tangible la pasión que pone cada uno en lo que ama, para que los demás puedan sentirlo y contagiarlo</p>
+        <p class="sobreMi--primerParrafo">Mi nombre es Carolina Oviedo, soy una diseñadora gráfica de 31 años y vivo en Villa Carlos paz, Córdoba.  Mi apodo "Cherry" viene del color de mi pelo, que por mis años de universidad era de un rojo vibrante, el cual adoptaron con cariño mis seres queridos y del que hoy he decidido hacer mi marca personal.</p>
+        <p class="sobreMi--segundoParrafo">Amo el arte como forma de expresión, la música como inspiración y la comunicación, que es abstracta y representa un desafío cotidiano, nos permite conocer a otros y la magia de poder hacer tangible la pasión que pone cada uno en lo que ama, para que los demás puedan sentirlo y contagiarlo</p>
     </section>
 <!--Seccion de trayectoria-->
     <section class="trayectoria mx-auto">
@@ -133,7 +133,7 @@
                 <img src="../img/logo-footer.webp" alt="logotipo de la empresa">
             </div>
             <div class="footer__paginas">
-                <h4>Páginas</h4>
+                <h3>Páginas</h3>
                 <ul>
                     <li>
                         <a href="../index.html">INICIO</a>
@@ -156,7 +156,7 @@
                 </ul>
             </div>            
             <div class="footer__contacto">
-                <h4>Contacto</h4>
+                <h3>Contacto</h3>
                 <ul>
                     <li class="correo">
                         <div class="footer__logo">
