se ajustaron tamaños y se mejoraron los atributos alt

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="trabajos">
             <article class="trabajos__ind">
                 <div class="trabajos__ind--iconos">    
-                    <img src="./img/ilustraciones.webp" alt="icono con acceso a la   seccion ilustraciones">
+                    <img src="./img/ilustraciones.webp" alt="icono de lapiz dibujando en una tablet que representa ilustraciones">
                 </div>
                 <h3>Ilustraciones</h3>
                 <p>En mis trabajos de ilustración busco darle vida a tus proyectos de forma divertida, con personajes únicos para tu marca, tu indumentaria o tu videojuego, pensando y planeando cada una de ellas en base a lo que las mismas deben comunicar.</p>
@@ -91,7 +91,7 @@
             </article>
             <article class="trabajos__ind">
                 <div class="trabajos__ind--iconos">
-                    <img src="./img/grafica.webp" alt="icono con acceso a la seccion de diseño Gráfico">
+                    <img src="./img/grafica.webp" alt="icono de lapiz pincel y regla que representa el diseño grafico">
                 </div>
                 <h3>Diseño Gráfico</h3>
                 <p>Para mis trabajos de diseño me centro principalmente en la identidad de la marca, buscando la mejor manera de representarlos de manera gráfica y sean fáciles de reconocer por los usuarios.</p>
@@ -101,7 +101,7 @@
             </article>
             <article class="trabajos__ind">
                 <div class="trabajos__ind--iconos">
-                    <img src="./img/web.webp" alt="icono con acceso a la seccion de diseño web">
+                    <img src="./img/web.webp" alt="icono de un ordenador que representa el diseño web">
                 </div>
                 <h3>Diseño Web</h3>
                 <p>En cuanto a mis proyectos web es de suma importancia la funcionalidad y estética, para que estos puedan comunicar de manera ágil los servicios de mis clientes, así como también transmitir sus valores e ideales.</p>
@@ -115,33 +115,33 @@
     <section class="proyectos">
         <div class="proyectos__container">
             <h2 class="proyectos__titulo">Mirá mis últimos proyectos</h2>
-            <div class="proyectos__imgcont" >
+            <div class="proyectos__imgcont">
                 <div class="proyectos__img  kuki">
-                    <img src="./img/Kuki.webp" alt="kuki pastelería">
+                    <img src="./img/Kuki.webp" alt="cupcakes dentro de cajas que representan la marca">
                     <p class="proyectos__texto">Kuki pastelería y café </p>
                 </div>
                 <div class="proyectos__img  timestop" >
-                    <img src="./img/Timestop.webp" alt="timestop games">
+                    <img src="./img/Timestop.webp" alt="moviles con diseños de interfaces para la marca">
                     <p class="proyectos__texto"> Timestop games</p>
                 </div>
                 <div class="proyectos__img  interwarp">
-                    <img src="./img/Interwarp.webp" alt="interwarp servicios de internet">
+                    <img src="./img/Interwarp.webp" alt="folletos publicitarios para la marca">
                     <p class="proyectos__texto">Interwarp servicios de internet</p>
                 </div>
                 <div class="proyectos__img  conan">
-                    <img src="./img/Conan.webp" alt="cerveza conan">
+                    <img src="./img/Conan.webp" alt="botellas con las etiquetas diseñadas por nosotros">
                     <p class="proyectos__texto">Cervezas Conan</p>
                 </div>
                 <div class="proyectos__img  picky">
-                    <img src="./img/Pickyprinting.webp" alt="picky printing">
+                    <img src="./img/Pickyprinting.webp" alt="camiseta con estampa diseñada por nosotros">
                     <p class="proyectos__texto">Picky printing</p>
                 </div>
                 <div class="proyectos__img  gilipollas">
-                    <img src="./img/Gilipollas.webp" alt="boxers gilipollas">
+                    <img src="./img/Gilipollas.webp" alt="estampa de pez hecha para la marca">
                     <p class="proyectos__texto">Boxers Gilipollas</p>
                 </div>
                 <div class="proyectos__img  bedel" >
-                    <img src="./img/Bedel.webp" alt="grupo bedel inmobiliaria">
+                    <img src="./img/Bedel.webp" alt="representacion de papeleria para la marca">
                     <p class="proyectos__texto">Grupo Bedel inmobiliaria</p>
                 </div>
             </div>
@@ -175,7 +175,7 @@
 <footer>
     <article class="footer__container mx-auto">
         <div class="footer__imgContainer">
-            <img src="./img/logo-footer.webp" alt="logotipo de la empresa">
+            <img src="./img/logo-footer.webp" alt="logotipo aternativo de la empresa">
         </div>
         <div class="footer__paginas">
             <h3>Páginas</h3>
