--- a/section/contacto.html
+++ b/section/contacto.html
@@ -59,7 +59,7 @@
 <!-- formulario armado con los elementos de bootstrap -->
     <section class="contactform__container mx-auto">
         <div class="contactform__img">
-            <img src="../img/Foto contacto.webp" alt="dibujo de persona en un telefono movil">
+            <img src="../img/Foto contacto.webp" alt="caricatura de la diseñadora enviando un mensaje">
         </div>
         <div class="contact-form">
             <h2>Enviame tu consulta</h2>
@@ -113,7 +113,7 @@
     <footer>
         <article class="footer__container mx-auto">
             <div class="footer__imgContainer">
-                <img src="../img/logo-footer.webp" alt="logotipo de la empresa">
+                <img src="../img/logo-footer.webp" alt="logotipo alternativo de la empresa">
             </div>
             <div class="footer__paginas">
                 <h3>Páginas</h3>
