--- a/section/ilustraciones.html
+++ b/section/ilustraciones.html
@@ -116,7 +116,7 @@
     <footer>
         <article class="footer__container mx-auto">
             <div class="footer__imgContainer">
-                <img src="../img/logo-footer.webp" alt="logotipo de la empresa">
+                <img src="../img/logo-footer.webp" alt="logotipo alternativo de la empresa">
             </div>
             <div class="footer__paginas">
                 <h3>Páginas</h3>
