--- a/section/grafico.html
+++ b/section/grafico.html
@@ -67,13 +67,13 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                    <img src="../img/grafico-gili.webp" class="d-block w-100" alt="trabajo grafico para gilipollas">
+                    <img src="../img/grafico-gili.webp" class="d-block w-100" alt="libreta con grafica para la empresa">
                 </div>
                 <div class="carousel-item">
                     <img src="../img/grafico-kuki.webp" class="d-block w-100" alt="trabajo grafico para kuki">
                 </div>
                 <div class="carousel-item">
-                    <img src="../img/grafico-picky.webp" class="d-block w-100" alt="trabajo grafico para gilipollas">
+                    <img src="../img/grafico-picky.webp" class="d-block w-100" alt="caja con grafica de la marca">
                 </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -116,7 +116,7 @@
     <footer>
         <article class="footer__container mx-auto">
             <div class="footer__imgContainer">
-                <img src="../img/logo-footer.webp" alt="logotipo de la empresa">
+                <img src="../img/logo-footer.webp" alt="logotipo alternativo de la empresa">
             </div>
             <div class="footer__paginas">
                 <h3>Páginas</h3>
