--- a/section/historia.html
+++ b/section/historia.html
@@ -62,7 +62,7 @@
     <section class="sobreMi mx-auto">
         <h2>Sobre Mí</h2>
         <div class="sobreMi__img mx-auto">
-            <img src="../img/dibujo-historia.webp" alt="fotografía de la diseñadora">
+            <img src="../img/dibujo-historia.webp" alt="caricatura de la diseñadora saludando">
         </div>
         <p class="sobreMi--primerParrafo">Mi nombre es Carolina Oviedo, soy una diseñadora gráfica de 31 años y vivo en Villa Carlos paz, Córdoba.  Mi apodo "Cherry" viene del color de mi pelo, que por mis años de universidad era de un rojo vibrante, el cual adoptaron con cariño mis seres queridos y del que hoy he decidido hacer mi marca personal.</p>
         <p class="sobreMi--segundoParrafo">Amo el arte como forma de expresión, la música como inspiración y la comunicación, que es abstracta y representa un desafío cotidiano, nos permite conocer a otros y la magia de poder hacer tangible la pasión que pone cada uno en lo que ama, para que los demás puedan sentirlo y contagiarlo</p>
@@ -72,7 +72,7 @@
         <div class="trayectoria__container mx-auto">
             <h2>Trayectoria</h2>
             <div class="trayectoria__img mx-auto">
-                <img src="../img/dibujo-trayectoria.webp" alt="fotografía de la diseñadora">
+                <img src="../img/dibujo-trayectoria.webp" alt="caricatura de la diseñadora caminando">
             </div>
             <p class="trayectoria--primerParrafo">Una vez terminada la secundaria y decidida que quería trabajar del arte, encontré en el diseño gráfico la posibilidad de convertir en realidad las ideas de los demás. En el año 2010 me inscribí en la Escuela Superior de Artes Aplicadas “Lino Enea Spilimbergo”, recibiéndome en 4 años.</p>
             <p class="trayectoria--segundoParrafo"> Desde entonces he trabajado para agencias de diseño gráfico y de diseño web asi como también de manera autónoma con empresas de diferentes calibres, desde emprendedores locales como empresas en el exterior.</p>
@@ -83,7 +83,7 @@
         <div class="container">
             <h2 class="conocimientos__titulo">Conocimientos</h2>
             <div class="conocimientos__foto">
-                <img src="../img/dibujo-conocimiento.webp" alt="fotografía de la diseñadora">
+                <img src="../img/dibujo-conocimiento.webp" alt="caricatura de la diseñadora sentada">
             </div>
             <p>Dentro de mis conocimientos y habilidades puedo destacar:</p>
             <div class="conocimientos__logo--container row">
@@ -130,7 +130,7 @@
     <footer>
         <article class="footer__container mx-auto">
             <div class="footer__imgContainer">
-                <img src="../img/logo-footer.webp" alt="logotipo de la empresa">
+                <img src="../img/logo-footer.webp" alt="logotipo alternativo de la empresa">
             </div>
             <div class="footer__paginas">
                 <h3>Páginas</h3>
