se cambiaron imagenes y se ajustaron los atributos alt de las imagenes

--- a/section/historia.html
+++ b/section/historia.html
@@ -89,37 +89,37 @@
             <div class="conocimientos__logo--container row">
                 <div class="conocimientos__logo col-6">
                     <div class="conocimientos__img">
-                        <img src="../img/ilustraciones.webp" alt="icono de referencia a conocimientos que tiene la diseñadora">
+                        <img src="../img/Identidad-Visual.webp" alt="ícono con materiales de ilustracion">
                     </div>
                     <h3>Identidad Visual</h3>
                 </div>        
                 <div class="conocimientos__logo col-6">
                     <div class="conocimientos__img">
-                        <img src="../img/ilustraciones.webp" alt="icono de referencia a conocimientos que tiene la diseñadora">
+                        <img src="../img/Diseño-personajes.webp" alt="ícono con un dibujo de un personaje">
                     </div>
                     <h3>Diseño de personajes</h3>
                 </div>
                 <div class="conocimientos__logo col-6">
                     <div class="conocimientos__img">
-                        <img src="../img/ilustraciones.webp" alt="icono de referencia a conocimientos que tiene la diseñadora">
+                        <img src="../img/Redes-Sociales.webp" alt="ícono con elementos de redes sociales">
                     </div>
                     <h3>Redes Sociales</h3>
                 </div>
                 <div class="conocimientos__logo col-6">
                     <div class="conocimientos__img">
-                        <img src="../img/ilustraciones.webp" alt="icono de referencia a conocimientos que tiene la diseñadora">
+                        <img src="../img/Vectorizacion.webp" alt="ícono de pluma y vector">
                     </div>
                     <h3>Vectorizacion</h3>
                 </div>
                 <div class="conocimientos__logo col-6">
                     <div class="conocimientos__img">
-                        <img src="../img/ilustraciones.webp" alt="icono de referencia a conocimientos que tiene la diseñadora">
+                        <img src="../img/Diseño-logotipos.webp" alt="ícono con un logotipo">
                     </div>
                     <h3>Diseño de logotipos</h3>
                 </div>
                 <div class="conocimientos__logo col-6">
                     <div class="conocimientos__img">
-                        <img src="../img/ilustraciones.webp" alt="icono de referencia a conocimientos que tiene la diseñadora">
+                        <img src="../img/Banners-publicitarios.webp" alt="ícono con un banner">
                     </div>
                     <h3>Banners publicitarios</h3>
                 </div>
