--- a/section/ilustraciones.html
+++ b/section/ilustraciones.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Conoce mas de mis trabajos de ilustraciones y quienes confiaron en mí">
-    <meta name="keywords" content="Diseñador, diseñadora, grafico, ilustraciones, trabajos, empresas">
+    <meta name="keywords" content="Diseñador, diseñadora, gráfico, ilustraciones, trabajos, empresas">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="icon" href="../img/OhCherry-Fabicon.ico">
@@ -100,16 +100,16 @@
         <h3>Ellos me eligieron</h3>
         <div class="ilustraciones__logo--container mx-auto row">
             <div class="ilustraciones__logo col-6 col-md-3">
-                <img src="../img/logo-Magico.webp" alt="mundo magico jugueteria">
+                <img src="../img/logo-Magico.webp" alt="mundo mágico juguetería">
             </div>
             <div class="ilustraciones__logo col-6 col-md-3">
                 <img src="../img/logo-MrCoco.webp" alt="mr coco bar">
             </div>
             <div class="ilustraciones__logo col-6 col-md-3">
-                <img src="../img/logo-Wapas.webp" alt="wapas zapateria">
+                <img src="../img/logo-Wapas.webp" alt="wapas zapatería">
             </div>
             <div class="ilustraciones__logo col-6 col-md-3">
-                <img src="../img/logo-sabores.webp" alt="sabores panaderia">
+                <img src="../img/logo-sabores.webp" alt="sabores panadería">
             </div>
         </div>
     </section>
