--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Diseñadora grafica de Cordoba, creativa y atenta al detalle. Diseño grafico, ilustraciones y diseño web. Contactame">
-    <meta name="keywords" content="Diseñador, diseñadora, grafico, ilustraciones, web">
+    <meta name="description" content="Diseñadora gráfica de Córdoba, creativa y atenta al detalle. Diseño gráfico, ilustraciones y diseño web. Contactame">
+    <meta name="keywords" content="Diseñador, diseñadora, gráfico, ilustraciones, web">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="icon" href="./img/OhCherry-Fabicon.ico">
@@ -67,7 +67,7 @@
 <!--Seccion Conoceme con acceso a la página Mi historia-->
     <article class="conoceme mx-auto" id="start">
         <div class="conoceme__foto-container">
-            <img src="./img/mi-historia.webp" alt="fotografía de la diseñadora">
+            <img src="./img/yo.webp" alt="fotografía de la diseñadora">
         </div> 
         <h1>¡Hola! Soy Cherry</h1>
         <p>Soy una diseñadora apasionada del arte, que busca día a día ser una mejor versión de la artista que hay dentro mío. Te invito a conocer un poco más de mí y mis trabajos con la esperanza de que algún día trabajemos juntos.</p>
@@ -81,7 +81,7 @@
         <div class="trabajos">
             <article class="trabajos__ind">
                 <div class="trabajos__ind--iconos">    
-                    <img src="./img/ilustraciones.webp" alt="icono de lapiz dibujando en una tablet que representa ilustraciones">
+                    <img src="./img/ilustraciones.webp" alt="ícono de lapiz dibujando en una tablet que representa ilustraciones">
                 </div>
                 <h3>Ilustraciones</h3>
                 <p>En mis trabajos de ilustración busco darle vida a tus proyectos de forma divertida, con personajes únicos para tu marca, tu indumentaria o tu videojuego, pensando y planeando cada una de ellas en base a lo que las mismas deben comunicar.</p>
@@ -91,7 +91,7 @@
             </article>
             <article class="trabajos__ind">
                 <div class="trabajos__ind--iconos">
-                    <img src="./img/grafica.webp" alt="icono de lapiz pincel y regla que representa el diseño grafico">
+                    <img src="./img/grafica.webp" alt="ícono de lapiz pincel y regla que representa el diseño grafico">
                 </div>
                 <h3>Diseño Gráfico</h3>
                 <p>Para mis trabajos de diseño me centro principalmente en la identidad de la marca, buscando la mejor manera de representarlos de manera gráfica y sean fáciles de reconocer por los usuarios.</p>
@@ -101,7 +101,7 @@
             </article>
             <article class="trabajos__ind">
                 <div class="trabajos__ind--iconos">
-                    <img src="./img/web.webp" alt="icono de un ordenador que representa el diseño web">
+                    <img src="./img/web.webp" alt="ícono de un ordenador que representa el diseño web">
                 </div>
                 <h3>Diseño Web</h3>
                 <p>En cuanto a mis proyectos web es de suma importancia la funcionalidad y estética, para que estos puedan comunicar de manera ágil los servicios de mis clientes, así como también transmitir sus valores e ideales.</p>
@@ -121,7 +121,7 @@
                     <p class="proyectos__texto">Kuki pastelería y café </p>
                 </div>
                 <div class="proyectos__img  timestop" >
-                    <img src="./img/Timestop.webp" alt="moviles con diseños de interfaces para la marca">
+                    <img src="./img/Timestop.webp" alt="móviles con diseños de interfaces para la marca">
                     <p class="proyectos__texto"> Timestop games</p>
                 </div>
                 <div class="proyectos__img  interwarp">
