--- a/section/grafico.html
+++ b/section/grafico.html
@@ -67,13 +67,13 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                    <img src="../img/grafico-gili.webp" class="d-block w-100" alt="libreta con grafica para la empresa">
+                    <img src="../img/grafico-gili.webp" class="d-block w-100" alt="libreta con gráfica para la empresa">
                 </div>
                 <div class="carousel-item">
-                    <img src="../img/grafico-kuki.webp" class="d-block w-100" alt="trabajo grafico para kuki">
+                    <img src="../img/grafico-kuki.webp" class="d-block w-100" alt="trabajo gráfico para kuki">
                 </div>
                 <div class="carousel-item">
-                    <img src="../img/grafico-picky.webp" class="d-block w-100" alt="caja con grafica de la marca">
+                    <img src="../img/grafico-picky.webp" class="d-block w-100" alt="caja con gráfica de la marca">
                 </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -109,7 +109,7 @@
                 <img src="../img/grafico-crystal.webp" alt="crystal blue indie games">
             </div>
             <div class="grafico__logo  col-6 col-md-3">
-                <img src="../img/grafico-delirio.webp" alt="delirio zapateria">
+                <img src="../img/grafico-delirio.webp" alt="delirio zapatería">
             </div>
         </div>
     </section>
